..-..-.... (0.6-pre1-cvs)	Volker Gropp <bwmng(at)gropp.org>
	
	* acinclude.m4, configure.in, aclocal.m4, Makefile.in, Makefile.am: added 
	full auto* support for a proper `make install`

	* defines.h: removed MAJOR, MINOR, EXTRA and changed to VERSION from
	config.h and configure

	* changelog: renamed to ChangeLog and changed to a proper format

	* THANKS: added


02-20-2005	(0.5)	Volker Gropp <bwmng(at)gropp.org>
	
	* added: outfile and daemonize for html output
	
	* fixes: for IRIX
	
	* added: bit/second output 
		(Michael Eckhoff <mreckhof(at)gmail.com>)
	
	* added: errors/s output
	
	* removed: -p and -b, added -u/--unit <value>
	
	* added: max stats (--type,-T and 't')
	
	* added: sum stats
	
	* moved: alot functions from retrieve.c into process.c
	
	* added: average stats
	
	* output.c: moved help output into help.c
	
	* help.c,curses.c: added onlinehelp for curses output (key 'h')
	
	* curses.c,bwm-ng.c: resize term in curses output
	
	* fixed: libstatgrab input segfault
	
	* fixed: /etc/bwm-ng.conf and ~/.bwm-ng.conf were not 
	skipped if configfile was specified in cmdline
	
	* added: optional argument for -D, -S and -d
	
	* bwm-ng.1: added manpage
	
	* configure.in: added configure --disable-extendedstats to compile w/o
    avg, sum and max
	
	* fixed: compile on MacOSX 10.1
	
	* curses.c: fallback to plain output if curses init fails
	
	* configure.in: added --enable-debug for -g3 and future use #define DEBUG


01-18-2005	(0.5-pre1)	Volker Gropp <bwmng(at)gropp.org>
	
	* fixed: invalid option msg showed up twice
	
	* added: --sumhidden, by default hidden ifaces dont count for
	total anymore
	
	* added: show iface cycle for gui (curses yet) modes
	up and not hidden, up and hidden, all
	
	* process.c: if ifacelist (-I) is prefaced with % it behaves like a
    blacklist
	
	* options.c: get_options (long_options) cleanup
	
	* fixed: wrong values on proc/net/dev wrap around.
	
	* fixed: several configure and compile issues
